[package]
name = "xenon"
version = "0.1.0"
authors = ["Yannic Nuwenhof <ynuwenhof@pm.me>"]
edition = "2021"
description = "Socks5 server"
readme = "README.md"
license = "MIT"

[dependencies]

[dependencies.clap]
version = "3.0.0-beta.5"
features = ["derive"]

[dependencies.tokio]
version = "1.15.0"
features = ["macros", "rt-multi-thread"]