[package]
name = "xenon"
version = "0.1.0"
authors = ["Yannic Nuwenhof <ynuwenhof@pm.me>"]
edition = "2021"
description = "Socks5 server"
readme = "README.md"
license = "MIT"

[dependencies]
log = "0.4.14"
thiserror = "1.0.30"
serde_json = "1.0.73"
simple_logger = "1.16.0"

[dependencies.serde]
version = "1.0.132"
features = ["derive"]

[dependencies.clap]
version = "3.0.0-beta.5"
features = ["derive"]

[dependencies.tokio]
version = "1.15.0"
features = ["fs", "net", "macros", "io-util", "rt-multi-thread"]